# yadro_test

./: .gitmodules  CMakeLists.txt  README.md  build.sh
inc/: calc_profit.hpp  check_format.hpp  table.hpp  types.hpp
src/: CMakeLists.txt  calc_profit.cpp  check_format.cpp  main.cpp  table.cpp
tests/: CMakeLists.txt  calc_profit_test.cpp  file_fixture.hpp  format_test.cpp
tests/in/: AlphabetOrder_in.txt  ClientInQueue_in.txt  EventAfterClosing_in.txt  FromPlaceToQueue_in.txt  LonelyDay_in.txt  MissingEndTime_in.txt  MissingLine_in.txt  MissingPrice_in.txt  MissingStartTime_in.txt  MissingTableCount_in.txt  PerfectDay_in.txt  QueueManagment_in.txt  ReversedTimestamps_in.txt  ThreeTables_in.txt  TimeDecreased_in.txt  WrongEndFormat_in.txt  WrongEventFormat_in.txt  WrongStartFormat_in.txt  WrongTableInEvent2_in.txt  WrongTableInEvent_in.txt
